Added Profile page

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -85,121 +85,6 @@ body {
   }
 }
 
-
-.section1 {
-    background: url('../images/conference1.png') no-repeat;
-    background-size: cover;
-    padding-bottom : 3em;
-
-    .nav-link a:hover {
-        background-color: transparent;
-        text-decoration: underline;
-    }
-
-    h3 a:hover{
-        text-decoration: none;
-    }
-
-    .concat-details {
-        text-align: center;
-        text-transform: uppercase;
-        color: white;
-    }
-
-    .col-sm-4 {
-        padding: 0px;
-    }
-
-    .col-md-5 {
-        padding: 0px;
-    }
-
-    .col-md-2 {
-        padding: 0px;
-    }
-
-    .form-group {
-        padding: 5em 0;
-    }
-
-
-    .form-control {
-        border-radius: 0px;
-        padding: 6px 12px;
-    }
-
-    .search {
-        background-color: #19DA81;
-    }
-
-}
-
-.about {
-    padding: 5em 0;
-    h3 {
-        text-transform: uppercase;
-    }
-    h3, p {
-        text-align: center;
-    }
-}
-
-.trending {
-    background: url('../images/conference1.png') no-repeat;
-    background-size: cover;
-    list-style-type: none;
-
-    .topics {
-        padding: 5em 0;
-        background-color: #142141;
-    }
-
-    ul {
-        list-style: none;
-    }
-
-    h3 {
-        text-transform: uppercase;
-        text-align: center;
-        color: #19DA81;
-    }
-
-    li {
-        text-decoration: none;
-        color: white;
-    }
-
-    .text-left {
-        text-align: right;
-    }
-
-    .text-right {
-        text-align: left;
-    }
-
-    @media screen and (max-width : 768px){
-        .text-left {
-            text-align: center;
-        }
-
-        .text-right {
-            text-align: center;
-        }
-    }
-}
-
-.standout {
-    padding: 5em 0;
-    text-align: justify;
-
-    img {
-        width: 80%;
-        margin: 10%;
-    }
-
-}
-
-.footer {
-    text-align: center;
-    background-color: black;
-}
+@import "./_main/_main.scss";
+@import "./_navigation/_common.scss";
+@import "./_profile/_profile.scss";
