--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -88,3 +88,5 @@ body {
 @import "./_main/_main.scss";
 @import "./_navigation/_common.scss";
 @import "./_profile/_profile.scss";
+@import "./_cards/_card.scss";
+@import "./_filter/_filter.scss";
