Added conference page

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -90,3 +90,4 @@ body {
 @import "./_profile/_profile.scss";
 @import "./_cards/_card.scss";
 @import "./_filter/_filter.scss";
+@import "./_conference/_conference.scss";
